# queryclaw

./: .gitignore  PUBLISH.md  README.md  README_CN.md  RELEASE_NOTES.md  RELEASE_NOTES_CN.md  pyproject.toml
.cursor/rules/: release.mdc
docs/: DESIGN_AGENT_CONSUMABILITY.md  DESIGN_AGENT_CONSUMABILITY_V2.md  DESIGN_AI_COLUMN.md  DESIGN_AI_COLUMN_CN.md  DESIGN_CHANNELS_SETUP.md  DESIGN_CHANNELS_SETUP_CN.md  DESIGN_CHANNEL_CONFIRMATION.md  DESIGN_CHANNEL_CONFIRMATION_CN.md  DESIGN_EXTERNAL_ACCESS.md  DESIGN_PLUGIN_SYSTEM.md  DESIGN_READ_SKILL_TOOL.md  DESIGN_READ_SKILL_TOOL_CN.md  DESIGN_SCHEDULER.md  DINGTALK_SETUP.md  DINGTALK_SETUP_CN.md  FEISHU_SETUP.md  FEISHU_SETUP_CN.md  FIX_SKILLS_INJECTION.md  FIX_SKILLS_INJECTION_CN.md  PLAN_ARCHITECTURE.md  PLAN_ARCHITECTURE_CN.md  PLAN_PHASE1_ARCHIVE.md  PLAN_PHASE2_ARCHIVE.md  PLAN_PHASE4_CHANNELS.md  PLAN_PHASE4_CHANNELS_CN.md  PLAN_SEEKDB_ADAPTER.md  PLAN_SEEKDB_FORK_SANDBOX.md  PROGRESS_AND_PLAN.md  REFLECTION_REQUIRE_CONFIRMATION_BUG.md  REFLECTION_REQUIRE_CONFIRMATION_BUG_CN.md  RELEASE_PROCESS.md  RELEASE_PROCESS_CN.md  SELF_EVOLUTION_ANALYSIS.md  SELF_EVOLUTION_ANALYSIS_CN.md  SKILLS_ROADMAP.md  SKILLS_ROADMAP_CN.md  TOKEN_OPTIMIZATION.md  USER_MANUAL.md  USER_MANUAL_CN.md
docs/archive/: DESIGN_AGENT_CONSUMABILITY.md  DESIGN_AGENT_CONSUMABILITY_CN.md  DESIGN_AGENT_CONSUMABILITY_V2.md  README.md
docs/zh/: DESIGN_EXTERNAL_ACCESS.md  DESIGN_PLUGIN_SYSTEM.md  DESIGN_SCHEDULER.md  DINGTALK_SETUP.md  FEISHU_SETUP.md  PLAN_ARCHITECTURE.md  PLAN_SEEKDB_ADAPTER.md  PLAN_SEEKDB_FORK_SANDBOX.md  PROGRESS_AND_PLAN.md  README.md  SKILLS_ROADMAP.md  TOKEN_OPTIMIZATION.md  USER_MANUAL.md
queryclaw/: __init__.py  __main__.py
queryclaw/agent/: context.py  loop.py  memory.py  skills.py  subagent.py
queryclaw/bus/: __init__.py  events.py  queue.py
queryclaw/channels/: __init__.py  base.py  dingtalk.py  feishu.py  manager.py
queryclaw/cli/: __init__.py  commands.py
queryclaw/config/: loader.py  schema.py
queryclaw/db/: base.py  (+5 more)
scripts/: e2e_verify.py
tests/: test_agent.py  test_bus_channels.py  test_cli.py  test_config.py  test_db.py  test_dingtalk.py  test_providers.py  test_safety.py  test_safety_redact.py  test_scheduler.py  test_skills.py  test_subagent.py  test_tools.py  test_tools_write.py
(+34 files in other folders)
