[project]
name = "queryclaw"
version = "0.1.0"
description = "AI-Native Database Agent for Safe & Autonomous Operations — Text-to-SQL with safety guardrails"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "QueryClaw Team" }]
keywords = ["database", "sql", "ai", "agent", "text-to-sql", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["queryclaw*"]
