[project]
name = "queryclaw"
version = "0.2.0"
description = "AI-Native Database Agent for Safe & Autonomous Operations — Text-to-SQL with safety guardrails"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "QueryClaw Team" }]
keywords = ["database", "sql", "ai", "agent", "text-to-sql", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "litellm>=1.40",
    "aiomysql>=0.2",
    "aiosqlite>=0.19",
    "loguru>=0.7",
]

[project.optional-dependencies]
postgresql = [
    "asyncpg>=0.29",
]
safety = [
    "sqlglot>=20.0",
]
all = [
    "asyncpg>=0.29",
    "sqlglot>=20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "asyncpg>=0.29",
    "sqlglot>=20.0",
]

[project.scripts]
queryclaw = "queryclaw.cli.commands:app"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["queryclaw*"]
